Alignment fixes

--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -38,7 +38,7 @@ h3 {
 }
 
 .header-main {
-  margin-top: 0;
+  margin-top: -1rem;
   margin-bottom: 0;
   display: flex;
   flex-wrap: wrap;
@@ -51,9 +51,10 @@ h3 {
   }
 
   h1 {
-    @extend %h5;
+    @extend %h4;
     width: 100%;
     color: #2f3060;
+    margin-top: 2rem;
     margin-bottom: 2rem;
     order: 2;
     display: block;
@@ -71,10 +72,10 @@ h3 {
 
   p {
     order: 3;
-    font-size: 16px;
+    font-size: 1.7rem;
     color: #222;
     margin: 0;
-    max-width: 50rem;
+    max-width: 55rem;
     margin-left: auto;
     margin-right: auto;
     line-height: 1.3;
